# ft-otel

./: .gitignore  README.md  pyproject.toml
example/: .sesskey  README.md  ai_renderer.py  app.py  math_example.py  math_renderer.py  requirements.txt
fasthtml_otel/: __init__.py  instrumentation.py  processors.py  renderers.py  streamer.py
fasthtml_otel/instrument/: __init__.py  pydantic_ai.py
